Set random string as default for hash_salt.

--- a/playbook.yml
+++ b/playbook.yml
@@ -25,8 +25,8 @@
               'driver' => 'mysql',
             );
             
-            $settings['hash_salt'] = 'changeme';
-            $settings['trusted_host_patterns'] = ['^.+$'];
+            $settings['hash_salt'] = '{{ hash_salt | default(lookup('password', '/dev/null chars=ascii_letters'), true) }}';
+            $settings['trusted_host_patterns'] = ['{{ trusted_host_patterns | default('^.+$', true) }}'];
 
   - name: Drupal PVC
     k8s:
@@ -66,11 +66,6 @@
                 image: "drupal:{{ version }}-apache"
                 ports:
                   - containerPort: 80
-                volumeMounts:
-                - mountPath: /var/www/html/sites/default/
-                  name: drupal-settings
-                - mountPath: /var/www/html/sites/default/files/
-                  name: drupal-files
                 livenessProbe:
                   tcpSocket:
                     port: 80
@@ -78,7 +73,12 @@
                 readinessProbe:
                   tcpSocket:
                     port: 80
-                  initialDelaySeconds: 30           
+                  initialDelaySeconds: 30
+                volumeMounts:
+                - mountPath: /var/www/html/sites/default/
+                  name: drupal-settings
+                - mountPath: /var/www/html/sites/default/files/
+                  name: drupal-files
               volumes:
                 - name: drupal-settings
                   configMap:
@@ -141,9 +141,6 @@
                 image: "mariadb"
                 ports:
                   - containerPort: 3306
-                volumeMounts:
-                - mountPath: /var/lib/mysql/
-                  name: drupal-db                            
                 env:
                   - name: MYSQL_DATABASE
                     value: drupal
@@ -153,6 +150,9 @@
                     value: drupal
                   - name: MYSQL_RANDOM_ROOT_PASSWORD
                     value: "yes"
+                volumeMounts:
+                - mountPath: /var/lib/mysql/
+                  name: drupal-db
               volumes:
                 - name: drupal-db
                   persistentVolumeClaim:
