--- a/playbook.yml
+++ b/playbook.yml
@@ -19,7 +19,7 @@
               'username' => 'drupal',
               'password' => 'drupal',
               'prefix' => '',
-              'host' => '{{ meta.name }}-db',
+              'host' => '127.0.0.1',
               'port' => '3306',
               'namespace' => 'Drupal\\Core\\Database\\Driver\\mysql',
               'driver' => 'mysql',
@@ -28,20 +28,35 @@
             $settings['hash_salt'] = '{{ hash_salt | default(lookup('password', '/dev/null chars=ascii_letters'), true) }}';
             $settings['trusted_host_patterns'] = ['{{ trusted_host_patterns | default('^.+$', true) }}'];
 
-  - name: Drupal PVC
+  - name: Files PVC
     k8s:
       definition:
         kind: PersistentVolumeClaim
         apiVersion: v1
         metadata:
-          name: '{{ meta.name }}-drupal-pvc'
+          name: '{{ meta.name }}-files-pvc'
           namespace: '{{ meta.namespace }}'
         spec:
           accessModes:
             - ReadWriteOnce
           resources:
             requests:
-              storage: 1Gi
+              storage: '{{ files_pvc }}'
+
+  - name: Mariadb PVC
+    k8s:
+      definition:
+        kind: PersistentVolumeClaim
+        apiVersion: v1
+        metadata:
+          name: '{{ meta.name }}-db-pvc'
+          namespace: '{{ meta.namespace }}'
+        spec:
+          accessModes:
+            - ReadWriteOnce
+          resources:
+            requests:
+              storage: '{{ db_pvc }}'
 
   - name: Drupal
     k8s:
@@ -79,64 +94,6 @@
                   name: drupal-settings
                 - mountPath: /var/www/html/sites/default/files/
                   name: drupal-files
-              volumes:
-                - name: drupal-settings
-                  configMap:
-                    name: '{{ meta.name }}-drupal-config'
-                - name: drupal-files
-                  persistentVolumeClaim:
-                    claimName: '{{ meta.name }}-drupal-pvc'
-
-  - name: Drupal Service
-    k8s:
-      definition:
-        kind: Service
-        apiVersion: v1
-        metadata:
-          name: '{{ meta.name }}-service'
-          namespace: '{{ meta.namespace }}'
-        spec:
-          type: NodePort
-          ports:
-            - port: 80
-              targetPort: 80
-          selector:
-            app: 'drupal'
-
-  - name: Mariadb PVC
-    k8s:
-      definition:
-        kind: PersistentVolumeClaim
-        apiVersion: v1
-        metadata:
-          name: '{{ meta.name }}-db-pvc'
-          namespace: '{{ meta.namespace }}'
-        spec:
-          accessModes:
-            - ReadWriteOnce
-          resources:
-            requests:
-              storage: 1Gi
-
-  - name: Mariadb
-    k8s:
-      definition:
-        kind: Deployment
-        apiVersion: apps/v1
-        metadata:
-          name: '{{ meta.name }}-db'
-          namespace: '{{ meta.namespace }}'
-        spec:
-          replicas: 1
-          selector:
-            matchLabels:
-              app: mariadb
-          template:
-            metadata:
-              labels:
-                app: mariadb
-            spec:
-              containers:     
               - name: mariadb
                 image: "mariadb"
                 ports:
@@ -154,22 +111,28 @@
                 - mountPath: /var/lib/mysql/
                   name: drupal-db
               volumes:
+                - name: drupal-settings
+                  configMap:
+                    name: '{{ meta.name }}-drupal-config'
+                - name: drupal-files
+                  persistentVolumeClaim:
+                    claimName: '{{ meta.name }}-files-pvc'
                 - name: drupal-db
                   persistentVolumeClaim:
                     claimName: '{{ meta.name }}-db-pvc'
 
-  - name: Mariadb Service
+  - name: Drupal Service
     k8s:
       definition:
         kind: Service
         apiVersion: v1
         metadata:
-          name: '{{ meta.name }}-db'
+          name: '{{ meta.name }}-service'
           namespace: '{{ meta.namespace }}'
         spec:
           type: NodePort
           ports:
-            - port: 3306
-              targetPort: 3306
+            - port: 80
+              targetPort: 80
           selector:
-            app: 'mariadb'
+            app: 'drupal'
