--- a/watches.yaml
+++ b/watches.yaml
@@ -2,4 +2,4 @@
 - version: v1alpha1
   group: drupal.drupal.org
   kind: Drupal
-  role: /opt/ansible/roles/drupal
+  playbook: /opt/ansible/main.yml
