--- a/molecule/test-local/playbook.yml
+++ b/molecule/test-local/playbook.yml
@@ -81,11 +81,11 @@
         debug_cr: '{{ lookup("k8s",
           kind=custom_resource.kind,
           api_version=custom_resource.apiVersion,
-          namespace=namespace,
+          namespace=example-drupal,
           resource_name=custom_resource.metadata.name
         )}}'
 
-    - name: debug memcached lookup
+    - name: debug drupal lookup
       ignore_errors: yes
       failed_when: false
       debug:
@@ -94,14 +94,14 @@
         deploy: '{{ lookup("k8s",
           kind="Deployment",
           api_version="apps/v1",
-          namespace=namespace,
-          label_selector="app=memcached"
+          namespace=test-drupal,
+          label_selector="app=drupal"
         )}}'
 
     - name: get operator logs
       ignore_errors: yes
       failed_when: false
-      command: kubectl logs deployment/{{ definition.metadata.name }} -n {{ namespace }}
+      command: kubectl logs deployment/{{ definition.metadata.name }} -n {{ namespace }} -c operator
       environment:
         KUBECONFIG: '{{ lookup("env", "KUBECONFIG") }}'
       vars:
