--- a/deploy/crds/drupal_v1alpha1_drupal_cr.yaml
+++ b/deploy/crds/drupal_v1alpha1_drupal_cr.yaml
@@ -4,6 +4,8 @@ metadata:
   name: example-drupal
 spec:
   drupal_version: '8.7'
+  # drupal_hash_salt: 'provide drupal_hash_salt here'
+  # drupal_trusted_host_patterns: 'provide trusted_host_patterns here'
   files_pvc_size: 1Gi
   manage_database: true
   database_image: mariadb:10
