--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services: docker
 language: python
 
 install:
-  - pip install docker molecule openshift
+  - pip install docker molecule openshift jmespath
 
 script:
   - molecule test -s test-local
