Issue #2: Switch to cluster-scoped Operator configuration and tests.

--- a/deploy/crds/drupal_v1alpha1_drupal_cr.yaml
+++ b/deploy/crds/drupal_v1alpha1_drupal_cr.yaml
@@ -2,9 +2,11 @@ apiVersion: drupal.drupal.org/v1alpha1
 kind: Drupal
 metadata:
   name: example-drupal
+  namespace: example-drupal
 spec:
   drupal_version: '8.7'
-  # drupal_hash_salt: 'provide drupal_hash_salt here'
+  # You should generate your own hash salt, e.g. `Crypt::randomBytesBase64(55)`.
+  drupal_hash_salt: 'fe918c992fb1bcfa01f32303c8b21f3d0a0'
   # drupal_trusted_host_patterns: 'provide trusted_host_patterns here'
   files_pvc_size: 1Gi
   manage_database: true
