--- a/molecule/test-cluster/playbook.yml
+++ b/molecule/test-cluster/playbook.yml
@@ -11,18 +11,24 @@
   tasks:
   - name: Create the drupal.drupal.org/v1alpha1.Drupal
     k8s:
-      namespace: '{{ namespace }}'
+      namespace: '{{ operator_namespace }}'
       definition: "{{ lookup('file', '/'.join([deploy_dir, 'crds/drupal_v1alpha1_drupal_cr.yaml'])) }}"
 
   - name: Get the newly created Custom Resource
     debug:
-      msg: "{{ lookup('k8s', group='drupal.drupal.org', api_version='v1alpha1', kind='Drupal', namespace=namespace, resource_name=custom_resource.metadata.name) }}"
+      msg: "{{ lookup('k8s',
+        group='drupal.drupal.org',
+        api_version='v1alpha1',
+        kind='Drupal',
+        namespace=custom_resource.metadata.namespace,
+        resource_name=custom_resource.metadata.name
+      )}}"
 
   - name: Wait 60s for reconciliation to run
     k8s_facts:
       api_version: 'v1alpha1'
       kind: 'Drupal'
-      namespace: '{{ namespace }}'
+      namespace: '{{ custom_resource.metadata.namespace }}'
       name: '{{ custom_resource.metadata.name }}'
     register: reconcile_cr
     until:
