--- a/molecule/test-local/prepare.yml
+++ b/molecule/test-local/prepare.yml
@@ -16,12 +16,12 @@
     k8s:
       api_version: v1
       kind: Namespace
-      name: '{{ namespace }}'
+      name: '{{ operator_namespace }}'
 
   - name: Create RBAC resources
     k8s:
       definition: "{{ lookup('template', '/'.join([deploy_dir, item])) }}"
-      namespace: '{{ namespace }}'
+      namespace: '{{ operator_namespace }}'
     with_items:
       - role.yaml
       - role_binding.yaml
