--- a/molecule/test-local/playbook.yml
+++ b/molecule/test-local/playbook.yml
@@ -23,7 +23,7 @@
     ansible_python_interpreter: '{{ ansible_playbook_python }}'
     deploy_dir: "{{ lookup('env', 'MOLECULE_PROJECT_DIRECTORY') }}/deploy"
     pull_policy: Never
-    REPLACE_IMAGE: drupal.drupal.org/drupal-operator:testing
+    operator_image: drupal.drupal.org/drupal-operator:testing
     custom_resource: "{{ lookup('file', '/'.join([deploy_dir, 'crds/drupal_v1alpha1_drupal_cr.yaml'])) | from_yaml }}"
   tasks:
   - block:
