--- a/molecule/default/prepare.yml
+++ b/molecule/default/prepare.yml
@@ -25,8 +25,11 @@
       delegate_to: localhost
 
     - name: Wait for the Kubernetes API to become available (this could take a minute)
-      command: kubectl cluster-info
+      uri:
+        url: "http://localhost:10080/kubernetes-ready"
+        status_code: 200
+        validate_certs: no
       register: result
-      until: result.stdout is regex("Kubernetes master.* is running")
+      until: (result.status|default(-1)) == 200
       retries: 60
       delay: 5
