--- a/molecule/default/asserts.yml
+++ b/molecule/default/asserts.yml
@@ -9,7 +9,7 @@
     custom_resource: "{{ lookup('file', '/'.join([deploy_dir, 'crds/drupal_v1alpha1_drupal_cr.yaml'])) | from_yaml }}"
   tasks:
     - name: Get all pods in {{ custom_resource.metadata.namespace }}
-      k8s_facts:
+      k8s_info:
         api_version: v1
         kind: Pod
         namespace: '{{ custom_resource.metadata.namespace }}'
