--- a/deploy/crds/drupal_v1alpha1_drupal_cr.yaml
+++ b/deploy/crds/drupal_v1alpha1_drupal_cr.yaml
@@ -4,11 +4,25 @@ metadata:
   name: example-drupal
   namespace: example-drupal
 spec:
+  # The container image to use for the Drupal deployment.
   drupal_image: 'drupal:8.8-apache'
+
   # You should generate your own hash salt, e.g. `Crypt::randomBytesBase64(55)`.
   drupal_hash_salt: 'fe918c992fb1bcfa01f32303c8b21f3d0a0'
+
+  # Set this value if you wish to define a trusted host pattern.
   # drupal_trusted_host_patterns: 'provide trusted_host_patterns here'
+
+  # The size of the files directory PVC.
   files_pvc_size: 1Gi
+
+  # Database options (will be used regardless of database location).
+  database_name: drupal
+  database_username: drupal
+  database_password: drupal
+  database_host: 'example-drupal-mariadb'
+
+  # Set this to 'true' to use a single-pod database managed by this operator.
   manage_database: true
   database_image: mariadb:10
   database_pvc_size: 1Gi
