Fixes #8: Add optional Ingress configuration.

--- a/deploy/crds/drupal_v1alpha1_drupal_cr.yaml
+++ b/deploy/crds/drupal_v1alpha1_drupal_cr.yaml
@@ -26,3 +26,7 @@ spec:
   manage_database: true
   database_image: mariadb:10
   database_pvc_size: 1Gi
+
+  # Set this to 'true' to have this operator manage Ingress for the site.
+  manage_ingress: true
+  drupal_hostname: example-drupal.test
