--- a/deploy/role.yaml
+++ b/deploy/role.yaml
@@ -26,6 +26,12 @@ rules:
   verbs:
   - '*'
 - apiGroups:
+  - extensions
+  resources:
+  - ingresses
+  verbs:
+  - '*'
+- apiGroups:
   - monitoring.coreos.com
   resources:
   - servicemonitors
