Issue #20: Use python3 instead of python for interpreter when testing in KinD.

--- a/molecule/default/asserts.yml
+++ b/molecule/default/asserts.yml
@@ -37,6 +37,6 @@
       retries: 60
       delay: 5
       vars:
-        ansible_python_interpreter: python
+        ansible_python_interpreter: python3
 
     # TODO: Maybe install Drupal?
