--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
+---
 sudo: required
 services: docker
 language: python
 
 install:
-  - pip install docker molecule openshift jmespath
+  - pip install docker molecule yamllint ansible-lint openshift jmespath
 
 script:
   - molecule test -s test-local
