--- a/roles/drupal/tasks/main.yml
+++ b/roles/drupal/tasks/main.yml
@@ -15,11 +15,11 @@
             'database' => '{{ database_name }}',
             'username' => '{{ database_username }}',
             'password' => '{{ database_password }}',
-            'prefix' => '',
+            'prefix' => '{{ database_prefix }}',
             'host' => '{{ database_host }}',
-            'port' => '3306',
-            'namespace' => 'Drupal\\Core\\Database\\Driver\\mysql',
-            'driver' => 'mysql',
+            'port' => '{{ database_port }}',
+            'namespace' => 'Drupal\\Core\\Database\\Driver\\{{ database_driver }}',
+            'driver' => '{{ database_driver }}',
           );
 
           $settings['hash_salt'] = '{{ drupal_hash_salt | default(lookup('password', '/dev/null chars=ascii_letters'), true) }}';
